# djang_blog_learn

./: .gitignore  pyproject.toml
my_blog/article/: admin.py  models.py  urls.py  views.py
my_blog/article/migrations/: 0001_initial.py
my_blog/my_blog/: settings.py
my_blog/templates/: base.html  footer.html  header.html
my_blog/templates/article/: list.html
