[project]
name = "djang_blog_learn"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "任伟明", email = "corejk@163.com"},
]
dependencies = ["django==2.2", "djangorestframework>=3.13.1"]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
